--- a/index.html
+++ b/index.html
@@ -1,62 +1,136 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cruzeiro's Clock</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles\style.css" />
+    <title>Cruzeiro's Clock</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <header>
-    <h1 style="text-align: center; font-size: 200%">Cruzeiro's Clock</h1>
-    <nav>
-      <a href="#clock">Clock</a>
-      <a href="#about">About</a>
-      <a href="#anthem">Anthem</a>
-      <a href="#iconic-moments">Iconic Moments</a>
-    </nav>
-  </header>
-  <div id="clock"; class="container">
-    <h2>Clock</h2>
-  </div>
+  <body>
+    <header>
+      <h1>Cruzeiro's Clock</h1>
+      <nav>
+        <a href="#clock">Clock</a>
+        <a href="#about">About</a>
+        <a href="#anthem">Anthem</a>
+        <a href="#iconic-moments">Iconic Moments</a>
+      </nav>
+    </header>
 
-  <div id="about"; class="container">
-    <h2>About</h2>
-    <p>
-    Cruzeiro Esporte Clube (Brazilian Portuguese: [kɾuˈzejɾu esˈpoʁtʃi ˈklubi]), known simply as Cruzeiro, is the largest sports club based in Belo Horizonte, Minas Gerais. Although competing in a number of different sports, Cruzeiro is mostly known for its association football team. Its football team is the most prestigious team in Belo Horizonte, Minas Gerais. It plays in the Campeonato Brasileiro Série A, the top tier of the Brazilian football league system, as well as in the Campeonato Mineiro, the state of Minas Gerais's premier state league.
+    <div id="clock" class="container">
+      <h2>Clock</h2>
+      <canvas id="clockCanvas" width="512" height="512">
+        Please upgrade your browser.
+      </canvas>
+      <canvas id="handlesCanvas" width="512" height="512">
+        Please upgrade your browser.
+      </canvas>
+      <canvas id="legendCanvas" width="512" height="512">
+        Please upgrade your browser.
+      </canvas>
 
-The club was founded on 2 January 1921, by sportsmen from the Italian colony of Belo Horizonte as Palestra Itália. As a result of the Second World War, the Brazilian federal government banned the use of any symbols referring to the Axis powers in 1942. The club board members rebaptized the club with the name of a leading national symbol: the Cruzeiro do Sul's constellation. Cruzeiro play their home games at the Mineirão stadium, which currently holds up to 62,547 spectators. Cruzeiro's regular kit colors are blue shirts and white shorts with white socks.
+      <label><b>Location:</b></label>
+      <button onclick="nextLocation()">+</button>
+      <button onclick="previousLocation()">-</button>
+    </div>
 
-Cruzeiro is one of Brazil's most successful clubs. It won the Campeonato Brasileiro Série A for the first time in 1966, after defeating Santos' Os Santásticos in the final series.[2] Cruzeiro has won the Brasileirão again in 2003, 2013 and 2014, obtaining the best campaign in the present format of the competition. Cruzeiro has also won record six Copa do Brasil titles and the Campeonato Mineiro 39 times. Cruzeiro won the defunct state competitions Taça Minas Gerais five times, the Copa dos Campeões Mineiros twice, Copa Sul Minas twice, the Torneio Início 10 times and the Supercampeonato Mineiro once. A Raposa also obtained many international laurels such as two Copa Libertadores, two Supercopa Libertadores, one Recopa Sudamericana, one Copa de Oro and one Copa Master de Supercopa. Cruzeiro is one of the two Brazilian clubs to complete the Domestic Treble, a feat accomplished in 2003 after winning the Campeonato Mineiro, the 2003 Copa do Brasil and the 2003 Brasileirão.
+    <div id="about" class="container">
+      <h2>About</h2>
+      <p>
+        Cruzeiro Esporte Clube (Brazilian Portuguese: [kɾuˈzejɾu esˈpoʁtʃi
+        ˈklubi]), known simply as Cruzeiro, is the largest sports club based in
+        Belo Horizonte, Minas Gerais. Although competing in a number of
+        different sports, Cruzeiro is mostly known for its association football
+        team. Its football team is the most prestigious team in Belo Horizonte,
+        Minas Gerais. It plays in the Campeonato Brasileiro Série A, the top
+        tier of the Brazilian football league system, as well as in the
+        Campeonato Mineiro, the state of Minas Gerais's premier state league.
+        The club was founded on 2 January 1921, by sportsmen from the Italian
+        colony of Belo Horizonte as Palestra Itália. As a result of the Second
+        World War, the Brazilian federal government banned the use of any
+        symbols referring to the Axis powers in 1942. The club board members
+        rebaptized the club with the name of a leading national symbol: the
+        Cruzeiro do Sul's constellation. Cruzeiro play their home games at the
+        Mineirão stadium, which currently holds up to 62,547 spectators.
+        Cruzeiro's regular kit colors are blue shirts and white shorts with
+        white socks. Cruzeiro is one of Brazil's most successful clubs. It won
+        the Campeonato Brasileiro Série A for the first time in 1966, after
+        defeating Santos' Os Santásticos in the final series.[2] Cruzeiro has
+        won the Brasileirão again in 2003, 2013 and 2014, obtaining the best
+        campaign in the present format of the competition. Cruzeiro has also won
+        record six Copa do Brasil titles and the Campeonato Mineiro 39 times.
+        Cruzeiro won the defunct state competitions Taça Minas Gerais five
+        times, the Copa dos Campeões Mineiros twice, Copa Sul Minas twice, the
+        Torneio Início 10 times and the Supercampeonato Mineiro once. A Raposa
+        also obtained many international laurels such as two Copa Libertadores,
+        two Supercopa Libertadores, one Recopa Sudamericana, one Copa de Oro and
+        one Copa Master de Supercopa. Cruzeiro is one of the two Brazilian clubs
+        to complete the Domestic Treble, a feat accomplished in 2003 after
+        winning the Campeonato Mineiro, the 2003 Copa do Brasil and the 2003
+        Brasileirão. Cruzeiro hold a long-standing rivalry against Atlético
+        Mineiro. It has contributed many key and famous players towards Brazil's
+        FIFA World Cup squads such as Piazza, Tostão, Nelinho, Ronaldo, Luisão,
+        Alex, Maicon, Cris, Jairzinho, Rivaldo and Edílson among so many others.
+      </p>
+    </div>
 
-Cruzeiro hold a long-standing rivalry against Atlético Mineiro. It has contributed many key and famous players towards Brazil's FIFA World Cup squads such as Piazza, Tostão, Nelinho, Ronaldo, Luisão, Alex, Maicon, Cris, Jairzinho, Rivaldo and Edílson among so many others.
-</p>  
-</div>
+    <div id="anthem" class="container">
+      <h2>Anthem</h2>
 
-  <div id="anthem"; class="container">
-    <h2>Anthem</h2>
-  </div>
+      <audio title="Hino do Cruzeiro" controls loop>
+        <source src="hino-fluminense-fc.mp3" type="audio/mpeg" />
+        Please upgrade your browser!
+      </audio>
 
-  <div id="iconic-moments"; class="container">
-    <h2>Iconic Moments</h2>
-    <aside style="display: flex">
+      <small>
+        <p>
+          Hino do Cruzeiro Esporte Clube por
+          <a
+            href="https://memoria.redeminas.tv/a-historia-do-hino-do-cruzeiro/#:~:text=O%20hino%20do%20Cruzeiro%20foi,pessoal%20da%20cantora%20Clara%20Nunes."
+          >
+            Jadir Ambrósio (1965).
+          </a>
+        </p>
+      </small>
+    </div>
+
+    <div id="iconic-moments" class="container">
+      <h2>Iconic Moments</h2>
+      <aside style="display: flex">
         <iframe
-         margin: 30px;
           width="560"
           height="315"
-          src="https://www.youtube.com/embed/UiVyUQqkWro?si=l73TeWzBeHJr_nQA"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen=""
-        ></iframe>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/4CGYQjC6WOY?si=v-wg-HeREzQaik0W"
+          src="https://www.youtube.com/embed/AXKb8zaFwfI?si=nwgPOWCya357IPCa"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         ></iframe>
-  </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/m8qlZkTFBkU?si=V6mvAebjG3rsnbi0"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </aside>
+
+      <script src="suncalc.js"></script>
+      <script src="clock.js"></script>
+      <script src="date.js"></script>
+      <script>
+          document.querySelector(
+              "#Rivelino"
+          ).innerHTML += `(há ${elapsedYears("1975-06-10")} anos atrás)`;
+          document.querySelector("#Renato").innerHTML += `(há ${elapsedYears(
+              "1995-06-25"
+          )} anos atrás)`;
+          document.querySelector("#Cano").innerHTML += `(há ${elapsedYears(
+              "2023-02-12"
+          )} anos atrás)`;
+      </script>
+    </div>
+  </body>
 </html>
